feat(ai): Add Ping method to AI providers for health check functionality
- Implement Ping method in GoogleProvider, GroqProvider, OllamaProvider, and OpenAIProvider to verify connectivity
- Update Provider interface to include Ping method
- Enhance UI to display AI model status based on Ping results
- Add new status column in AI settings view for better user feedback

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -82,6 +82,7 @@
   "ui_ai_providers_api_key_tooltip": "The API key of the AI provider.",
   "ui_ai_providers_host": "Host",
   "ui_ai_providers_host_tooltip": "The host of the AI provider.",
+  "ui_ai_providers_status": "Status",
   "ui_ai_providers_api_key_required": "API key is required.",
   "ui_ai_providers_host_required": "Host is required.",
   "ui_ai_model": "AI Model",
