feat(settings): Add UI width configuration
- Introduce new settings for adjusting the application window width, allowing users to set values between 800-1600 pixels.
- Update language files for English, Portuguese, Russian, and Chinese to include translations for the new UI width settings and tips.
- Refactor UI positioning functions to utilize the configurable window width for better layout management.
- Enhance the settings view to include a dedicated section for UI-related configurations.

--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -26,6 +26,7 @@
   "ui_query_hotkeys": "Teclas de atalho para consulta",
   "ui_query_shortcuts": "Atalhos de consulta",
   "ui_general": "Geral",
+  "ui_ui": "Interface",
   "ui_ai": "IA",
   "ui_autostart": "Iniciar automaticamente",
   "ui_autostart_tips": "Quando selecionado, o Wox ser iniciado automaticamente quando o computador for ligado",
@@ -139,6 +140,8 @@
   "ui_ai_model_selector_model_name": "Nome do modelo",
   "ui_ai_model_selector_cancel": "Cancelar",
   "ui_ai_model_selector_save": "Salvar",
+  "ui_app_width": "Largura da janela",
+  "ui_app_width_tips": "Ajuste a largura da janela do Wox (800-1600 pixels)",
   "plugin_app_open": "Abrir",
   "plugin_app_open_containing_folder": "Abrir pasta contendo",
   "plugin_app_copy_path": "Copiar caminho",
