--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -26,6 +26,7 @@
   "ui_query_hotkeys": "Горячие клавиши запроса",
   "ui_query_shortcuts": "Ярлыки запросов",
   "ui_general": "Общие",
+  "ui_ui": "Интерфейс",
   "ui_ai": "ИИ",
   "ui_autostart": "Автозапуск",
   "ui_autostart_tips": "При выборе Wox будет запускаться автоматически при старте компьютера",
@@ -139,6 +140,8 @@
   "ui_ai_model_selector_model_name": "Имя модели",
   "ui_ai_model_selector_cancel": "Отмена",
   "ui_ai_model_selector_save": "Сохранить",
+  "ui_app_width": "Ширина окна",
+  "ui_app_width_tips": "Настройте ширину окна Wox (800-1600 пикселей)",
   "plugin_app_open": "Открыть",
   "plugin_app_open_containing_folder": "Открыть содержащую папку",
   "plugin_app_copy_path": "Копировать путь",
