--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -26,6 +26,7 @@
   "ui_query_hotkeys": "Query Hotkeys",
   "ui_query_shortcuts": "Query Shortcuts",
   "ui_general": "General",
+  "ui_ui": "UI",
   "ui_ai": "AI",
   "ui_autostart": "Autostart",
   "ui_autostart_tips": "When selected, Wox will start automatically when the computer starts",
@@ -139,6 +140,8 @@
   "ui_ai_model_selector_model_name": "Model name",
   "ui_ai_model_selector_cancel": "Cancel",
   "ui_ai_model_selector_save": "Save",
+  "ui_app_width": "Window width",
+  "ui_app_width_tips": "Adjust the width of the Wox window (800-1600 pixels)",
   "plugin_app_open": "Open",
   "plugin_app_open_containing_folder": "Open Containing Folder",
   "plugin_app_copy_path": "Copy Path",
