--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -26,6 +26,7 @@
   "ui_query_hotkeys": "查询快捷",
   "ui_query_shortcuts": "查询缩写",
   "ui_general": "通用",
+  "ui_ui": "界面",
   "ui_ai": "AI",
   "ui_autostart": "开机自启动",
   "ui_autostart_tips": "选中后，Wox将在电脑开机时自动启动",
@@ -139,6 +140,8 @@
   "ui_ai_model_selector_model_name": "模型名称",
   "ui_ai_model_selector_cancel": "取消",
   "ui_ai_model_selector_save": "保存",
+  "ui_app_width": "窗口宽度",
+  "ui_app_width_tips": "调整 Wox 窗口的宽度（800-1600像素）",
   "plugin_app_open": "打开",
   "plugin_app_open_containing_folder": "打开所在文件夹",
   "plugin_app_copy_path": "复制路径",
