feat(file): Add everything support for file plugin
- Introduce EverythingNotRunningError to handle cases when the Everything application is not running.
- Update searcher interfaces for Linux, macOS, and Windows to return errors, improving error management.
- Implement user notifications and logging for search errors in the file plugin.
- Add new translations for error messages in English, Portuguese, Russian, and Chinese.
- Refactor resource extraction to include additional files in the 'others' directory.

--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -270,6 +270,9 @@
   "plugin_calculator_input_expression": "Digite a expressão para calcular",
   "plugin_file_open": "Abrir",
   "plugin_file_open_containing_folder": "Abrir pasta contendo",
+  "plugin_file_everything_not_running": "Everything não está em execução",
+  "plugin_file_everything_please_run_everything": "Por favor, execute o Everything",
+  "plugin_file_everything_goto_website": "Ir para o site do Everything",
   "plugin_manager_query_failed": "Consulta %s falhou",
   "plugin_manager_remove_from_favorite": "Remover dos favoritos",
   "plugin_manager_add_to_favorite": "Adicionar aos favoritos",
