--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -270,6 +270,9 @@
   "plugin_calculator_input_expression": "Input expression to calculate",
   "plugin_file_open": "Open",
   "plugin_file_open_containing_folder": "Open containing folder",
+  "plugin_file_everything_not_running": "Everything is not running",
+  "plugin_file_everything_please_run_everything": "Please run Everything",
+  "plugin_file_everything_goto_website": "Go to Everything website",
   "plugin_manager_query_failed": "%s query failed",
   "plugin_manager_remove_from_favorite": "Remove from favorite",
   "plugin_manager_add_to_favorite": "Add to favorite",
