--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -270,6 +270,9 @@
   "plugin_calculator_input_expression": "Введите выражение для вычисления",
   "plugin_file_open": "Открыть",
   "plugin_file_open_containing_folder": "Открыть содержащую папку",
+  "plugin_file_everything_not_running": "Everything не запущен",
+  "plugin_file_everything_please_run_everything": "Пожалуйста, запустите Everything",
+  "plugin_file_everything_goto_website": "Перейти на сайт Everything",
   "plugin_manager_query_failed": "Запрос %s не выполнен",
   "plugin_manager_remove_from_favorite": "Удалить из избранного",
   "plugin_manager_add_to_favorite": "Добавить в избранное",
