--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -276,5 +276,17 @@
   "plugin_manager_query_failed": "%s query failed",
   "plugin_manager_remove_from_favorite": "Remove from favorite",
   "plugin_manager_add_to_favorite": "Add to favorite",
-  "plugin_manager_invalid_query_type": "Invalid query type"
+  "plugin_manager_invalid_query_type": "Invalid query type",
+  "plugin_ai_chat_mcp_servers": "MCP Servers",
+  "plugin_ai_chat_mcp_servers_tooltip": "The MCP servers to use for this command, visit https://mcp.so for more mcp servers",
+  "plugin_ai_chat_mcp_server_name": "Name",
+  "plugin_ai_chat_mcp_server_name_tooltip": "The name of the MCP server",
+  "plugin_ai_chat_mcp_server_type": "Type",
+  "plugin_ai_chat_mcp_server_type_tooltip": "The type of the MCP server",
+  "plugin_ai_chat_mcp_server_command": "Command",
+  "plugin_ai_chat_mcp_server_command_tooltip": "The command to run the MCP server",
+  "plugin_ai_chat_mcp_server_environment_variables": "Environment Variables",
+  "plugin_ai_chat_mcp_server_environment_variables_tooltip": "The environment variables to run the MCP server",
+  "plugin_ai_chat_mcp_server_url": "URL",
+  "plugin_ai_chat_mcp_server_url_tooltip": "The URL of the MCP server"
 }
