--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -276,5 +276,16 @@
   "plugin_manager_query_failed": "Запрос %s не выполнен",
   "plugin_manager_remove_from_favorite": "Удалить из избранного",
   "plugin_manager_add_to_favorite": "Добавить в избранное",
-  "plugin_manager_invalid_query_type": "Недопустимый тип запроса"
+  "plugin_manager_invalid_query_type": "Недопустимый тип запроса",
+  "plugin_ai_chat_mcp_servers": "Серверы MCP",
+  "plugin_ai_chat_mcp_servers_tooltip": "Серверы MCP для использования для этой команды, посетите https://mcp.so для большего количества серверов MCP",
+  "plugin_ai_chat_mcp_server_name": "Имя",
+  "plugin_ai_chat_mcp_server_name_tooltip": "Имя сервера MCP",
+  "plugin_ai_chat_mcp_server_type": "Тип",
+  "plugin_ai_chat_mcp_server_type_tooltip": "Тип сервера MCP",
+  "plugin_ai_chat_mcp_server_command": "Команда",
+  "plugin_ai_chat_mcp_server_environment_variables": "Переменные окружения",
+  "plugin_ai_chat_mcp_server_environment_variables_tooltip": "Переменные окружения для запуска сервера MCP",
+  "plugin_ai_chat_mcp_server_url": "URL",
+  "plugin_ai_chat_mcp_server_url_tooltip": "URL сервера MCP"
 }
