--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -275,5 +275,18 @@
   "plugin_file_everything_goto_website": "前往 Everything 官网",
   "plugin_manager_query_failed": "%s 查询失败",
   "plugin_manager_remove_from_favorite": "从收藏夹移除",
-  "plugin_manager_add_to_favorite": "添加到收藏夹"
+  "plugin_manager_add_to_favorite": "添加到收藏夹",
+  "plugin_manager_invalid_query_type": "无效的查询类型",
+  "plugin_ai_chat_mcp_servers": "MCP 服务器",
+  "plugin_ai_chat_mcp_servers_tooltip": "用于此命令的 MCP 服务器，访问 https://mcp.so 获取更多 MCP 服务器",
+  "plugin_ai_chat_mcp_server_name": "名称",
+  "plugin_ai_chat_mcp_server_name_tooltip": "MCP 服务器的名称",
+  "plugin_ai_chat_mcp_server_type": "类型",
+  "plugin_ai_chat_mcp_server_type_tooltip": "MCP 服务器的类型",
+  "plugin_ai_chat_mcp_server_command": "命令",
+  "plugin_ai_chat_mcp_server_command_tooltip": "运行 MCP 服务器的命令",
+  "plugin_ai_chat_mcp_server_environment_variables": "环境变量",
+  "plugin_ai_chat_mcp_server_environment_variables_tooltip": "运行 MCP 服务器的环境变量",
+  "plugin_ai_chat_mcp_server_url": "URL",
+  "plugin_ai_chat_mcp_server_url_tooltip": "MCP 服务器的 URL"
 }
