feat(ai): Introduce default AI model selection in chat settings
- Add a new setting for selecting a default AI model in the AIChatPlugin, enhancing user customization options.
- Update language resources to include translations for the new default model setting and its tooltip in English, Portuguese, Russian, and Chinese.
- Refactor the AIChatPlugin to utilize the selected default model for chat interactions, improving the overall user experience.
- Correct the naming convention for AI model settings to ensure consistency across the codebase.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -288,5 +288,7 @@
   "plugin_ai_chat_mcp_server_environment_variables": "Environment Variables",
   "plugin_ai_chat_mcp_server_environment_variables_tooltip": "The environment variables to run the MCP server",
   "plugin_ai_chat_mcp_server_url": "URL",
-  "plugin_ai_chat_mcp_server_url_tooltip": "The URL of the MCP server"
+  "plugin_ai_chat_mcp_server_url_tooltip": "The URL of the MCP server",
+  "plugin_ai_chat_default_model": "Default Model",
+  "plugin_ai_chat_default_model_tooltip": "The default model to use for this command"
 }
