feat(ai): Enhance MCP server tool management and add disabled state
- Refactor MCP client handling to cache clients and tools for improved performance.
- Introduce a disabled state for MCP server configurations, allowing for better control over active servers.
- Update language resources to include translations for the new disabled state and tool descriptions.
- Modify UI components to reflect the disabled state of MCP servers in the settings view.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -281,6 +281,9 @@
   "plugin_ai_chat_mcp_servers_tooltip": "The MCP servers to use for this command, visit https://mcp.so for more mcp servers",
   "plugin_ai_chat_mcp_server_name": "Name",
   "plugin_ai_chat_mcp_server_name_tooltip": "The name of the MCP server",
+  "plugin_ai_chat_mcp_server_disabled": "Disabled",
+  "plugin_ai_chat_mcp_server_tools": "Tools",
+  "plugin_ai_chat_mcp_server_tools_tooltip": "The tools provided by the MCP server",
   "plugin_ai_chat_mcp_server_type": "Type",
   "plugin_ai_chat_mcp_server_type_tooltip": "The type of the MCP server",
   "plugin_ai_chat_mcp_server_command": "Command",
