--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -281,6 +281,9 @@
   "plugin_ai_chat_mcp_servers_tooltip": "Os servidores MCP a serem usados para esta consulta, visite https://mcp.so para mais servidores MCP",
   "plugin_ai_chat_mcp_server_name": "Nome",
   "plugin_ai_chat_mcp_server_name_tooltip": "O nome do servidor MCP",
+  "plugin_ai_chat_mcp_server_disabled": "Desabilitado",
+  "plugin_ai_chat_mcp_server_tools": "Ferramentas",
+  "plugin_ai_chat_mcp_server_tools_tooltip": "As ferramentas fornecidas pelo servidor MCP",
   "plugin_ai_chat_mcp_server_type": "Tipo",
   "plugin_ai_chat_mcp_server_type_tooltip": "O tipo do servidor MCP",
   "plugin_ai_chat_mcp_server_command": "Comando",
