--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -281,6 +281,9 @@
   "plugin_ai_chat_mcp_servers_tooltip": "Серверы MCP для использования для этой команды, посетите https://mcp.so для большего количества серверов MCP",
   "plugin_ai_chat_mcp_server_name": "Имя",
   "plugin_ai_chat_mcp_server_name_tooltip": "Имя сервера MCP",
+  "plugin_ai_chat_mcp_server_disabled": "Отключено",
+  "plugin_ai_chat_mcp_server_tools": "Инструменты",
+  "plugin_ai_chat_mcp_server_tools_tooltip": "Инструменты, предоставляемые сервером MCP",
   "plugin_ai_chat_mcp_server_type": "Тип",
   "plugin_ai_chat_mcp_server_type_tooltip": "Тип сервера MCP",
   "plugin_ai_chat_mcp_server_command": "Команда",
