--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -281,6 +281,9 @@
   "plugin_ai_chat_mcp_servers_tooltip": "用于此命令的 MCP 服务器，访问 https://mcp.so 获取更多 MCP 服务器",
   "plugin_ai_chat_mcp_server_name": "名称",
   "plugin_ai_chat_mcp_server_name_tooltip": "MCP 服务器的名称",
+  "plugin_ai_chat_mcp_server_disabled": "禁用",
+  "plugin_ai_chat_mcp_server_tools": "工具",
+  "plugin_ai_chat_mcp_server_tools_tooltip": "MCP 服务器提供的工具",
   "plugin_ai_chat_mcp_server_type": "类型",
   "plugin_ai_chat_mcp_server_type_tooltip": "MCP 服务器的类型",
   "plugin_ai_chat_mcp_server_command": "命令",
