feat(i18n): add AI chat related translations for multiple languages

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -144,6 +144,23 @@
   "ui_app_width_tips": "Adjust the width of the Wox window (800-1600 pixels)",
   "ui_max_result_count": "Maximum results",
   "ui_max_result_count_tips": "Maximum number of results to display in the list (5-15 items)",
+  "ui_ai_chat_select_model": "Please select a model",
+  "ui_ai_chat_input_hint": "Type a message here, press ← to send",
+  "ui_ai_chat_configure_tools": "Configure Tool Usage",
+  "ui_ai_chat_send": "Send",
+  "ui_ai_chat_options": "Chat Options",
+  "ui_ai_chat_select_model_title": "Select Model",
+  "ui_ai_chat_configure_tools_title": "Configure Tools",
+  "ui_ai_chat_tool_status_streaming": "Streaming",
+  "ui_ai_chat_tool_status_pending": "Pending",
+  "ui_ai_chat_tool_status_running": "Running",
+  "ui_ai_chat_tool_status_succeeded": "Succeeded",
+  "ui_ai_chat_tool_status_failed": "Failed: %s",
+  "ui_ai_chat_tool_detail_id": "Id",
+  "ui_ai_chat_tool_detail_name": "Name",
+  "ui_ai_chat_tool_detail_params": "Parameters",
+  "ui_ai_chat_tool_detail_duration": "Duration",
+  "ui_ai_chat_tool_detail_response": "Response",
   "plugin_app_open": "Open",
   "plugin_app_open_containing_folder": "Open Containing Folder",
   "plugin_app_copy_path": "Copy Path",
