--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -144,6 +144,23 @@
   "ui_app_width_tips": "Ajuste a largura da janela do Wox (800-1600 pixels)",
   "ui_max_result_count": "Contagem máxima de resultados",
   "ui_max_result_count_tips": "Defina o número máximo de resultados a serem exibidos na lista (5-15 itens)",
+  "ui_ai_chat_select_model": "Por favor, selecione um modelo",
+  "ui_ai_chat_input_hint": "Digite uma mensagem aqui, pressione ← para enviar",
+  "ui_ai_chat_configure_tools": "Configurar uso de ferramentas",
+  "ui_ai_chat_send": "Enviar",
+  "ui_ai_chat_options": "Opções de chat",
+  "ui_ai_chat_select_model_title": "Selecionar modelo",
+  "ui_ai_chat_configure_tools_title": "Configurar ferramentas",
+  "ui_ai_chat_tool_status_streaming": "Transmitindo",
+  "ui_ai_chat_tool_status_pending": "Pendente",
+  "ui_ai_chat_tool_status_running": "Executando",
+  "ui_ai_chat_tool_status_succeeded": "Sucesso",
+  "ui_ai_chat_tool_status_failed": "Falha: %s",
+  "ui_ai_chat_tool_detail_id": "Id",
+  "ui_ai_chat_tool_detail_name": "Nome",
+  "ui_ai_chat_tool_detail_params": "Parâmetros",
+  "ui_ai_chat_tool_detail_duration": "Duração",
+  "ui_ai_chat_tool_detail_response": "Resposta",
   "plugin_app_open": "Abrir",
   "plugin_app_open_containing_folder": "Abrir pasta contendo",
   "plugin_app_copy_path": "Copiar caminho",
