--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -144,6 +144,23 @@
   "ui_app_width_tips": "Настройте ширину окна Wox (800-1600 пикселей)",
   "ui_max_result_count": "Максимальное количество результатов",
   "ui_max_result_count_tips": "Установите максимальное количество результатов, отображаемых в списке (5-15 элементов)",
+  "ui_ai_chat_select_model": "Пожалуйста, выберите модель",
+  "ui_ai_chat_input_hint": "Введите сообщение здесь, нажмите ← для отправки",
+  "ui_ai_chat_configure_tools": "Настроить использование инструментов",
+  "ui_ai_chat_send": "Отправить",
+  "ui_ai_chat_options": "Опции чата",
+  "ui_ai_chat_select_model_title": "Выбрать модель",
+  "ui_ai_chat_configure_tools_title": "Настроить инструменты",
+  "ui_ai_chat_tool_status_streaming": "Потоковая передача",
+  "ui_ai_chat_tool_status_pending": "В ожидании",
+  "ui_ai_chat_tool_status_running": "Выполняется",
+  "ui_ai_chat_tool_status_succeeded": "Успешно",
+  "ui_ai_chat_tool_status_failed": "Ошибка: %s",
+  "ui_ai_chat_tool_detail_id": "Id",
+  "ui_ai_chat_tool_detail_name": "Имя",
+  "ui_ai_chat_tool_detail_params": "Параметры",
+  "ui_ai_chat_tool_detail_duration": "Длительность",
+  "ui_ai_chat_tool_detail_response": "Ответ",
   "plugin_app_open": "Открыть",
   "plugin_app_open_containing_folder": "Открыть содержащую папку",
   "plugin_app_copy_path": "Копировать путь",
