--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -142,6 +142,23 @@
   "ui_ai_model_selector_save": "保存",
   "ui_app_width": "窗口宽度",
   "ui_app_width_tips": "调整 Wox 窗口的宽度（800-1600像素）",
+  "ui_ai_chat_select_model": "请选择模型",
+  "ui_ai_chat_input_hint": "在这里输入消息，按 ← 发送",
+  "ui_ai_chat_configure_tools": "配置工具使用",
+  "ui_ai_chat_send": "发送",
+  "ui_ai_chat_options": "聊天选项",
+  "ui_ai_chat_select_model_title": "选择模型",
+  "ui_ai_chat_configure_tools_title": "配置工具",
+  "ui_ai_chat_tool_status_streaming": "正在调用",
+  "ui_ai_chat_tool_status_pending": "等待执行",
+  "ui_ai_chat_tool_status_running": "正在执行",
+  "ui_ai_chat_tool_status_succeeded": "执行成功",
+  "ui_ai_chat_tool_status_failed": "执行失败: %s",
+  "ui_ai_chat_tool_detail_id": "Id",
+  "ui_ai_chat_tool_detail_name": "名称",
+  "ui_ai_chat_tool_detail_params": "参数",
+  "ui_ai_chat_tool_detail_duration": "耗时",
+  "ui_ai_chat_tool_detail_response": "响应",
   "ui_max_result_count": "最大结果数",
   "ui_max_result_count_tips": "显示在列表中的最大结果数量（5-15项）",
   "plugin_app_open": "打开",
