--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -316,5 +316,10 @@
   "plugin_ai_chat_fallback_search_chat_for": "Use AI Chat for %s",
   "plugin_ai_chat_start_chat": "Start Chat",
   "plugin_ai_chat_enable_auto_focus_to_chat_input": "Auto focus to chat input when open with query hotkey",
-  "plugin_ai_chat_enable_auto_focus_to_chat_input_tooltip": "When enabled, Wox will automatically focus to chat input when open with query hotkey, this will enable you to type your query immediately"
+  "plugin_ai_chat_enable_auto_focus_to_chat_input_tooltip": "When enabled, Wox will automatically focus to chat input when open with query hotkey, this will enable you to type your query immediately",
+  "ui_about": "About",
+  "ui_about_version": "Version",
+  "ui_about_docs": "Docs",
+  "ui_about_github": "GitHub",
+  "ui_about_description": "Wox is a launcher for Windows, macOS and Linux that simply works."
 }
