--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -315,5 +315,10 @@
   "plugin_ai_chat_fallback_search_chat_for": "Использовать AI Chat для %s",
   "plugin_ai_chat_start_chat": "Начать чат",
   "plugin_ai_chat_enable_auto_focus_to_chat_input": "Автоматически фокусировать на вводе чата при открытии с горячей клавишей запроса",
-  "plugin_ai_chat_enable_auto_focus_to_chat_input_tooltip": "Если включено, Wox автоматически фокусируется на вводе чата при открытии с горячей клавишей запроса, что позволяет вам ввести свой запрос немедленно"
+  "plugin_ai_chat_enable_auto_focus_to_chat_input_tooltip": "Если включено, Wox автоматически фокусируется на вводе чата при открытии с горячей клавишей запроса, что позволяет вам ввести свой запрос немедленно",
+  "ui_about": "О программе",
+  "ui_about_version": "Версия",
+  "ui_about_docs": "Документация",
+  "ui_about_github": "GitHub",
+  "ui_about_description": "Wox - это лаунчер для Windows, macOS и Linux, который просто работает."
 }
