feat(updater): implement auto-update feature [WIP]
- Added functionality to enable automatic update checks and downloads in the settings.
- Introduced a background task to periodically check for updates if enabled.
- Enhanced the updater logic to handle update status and error reporting.
- Updated UI to include options for enabling auto-update with corresponding tooltips.
- Refactored doctor checks to utilize the new update status handling.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -13,6 +13,8 @@
   "ui_hide_on_lost_focus_tips": "When selected, Wox will hide when it loses focus",
   "ui_hide_on_start": "Hide on start",
   "ui_hide_on_start_tips": "When selected, Wox will hide when it starts",
+  "ui_enable_auto_update": "Enable auto update",
+  "ui_enable_auto_update_tips": "When selected, Wox will automatically download updates in the background but will not install them until you confirm",
   "ui_show_tray": "Show tray icon",
   "ui_show_tray_tips": "When selected, Wox will show a tray icon",
   "ui_show_position": "Display position",
@@ -203,8 +205,9 @@
   "plugin_url_open_in_browser": "Open in browser",
   "plugin_doctor_version": "Version",
   "plugin_doctor_version_latest": "Already using the latest version: %s",
-  "plugin_doctor_version_update_available": "New version available, current: %s, latest: %s",
+  "plugin_doctor_version_update_available": "New version available, current: %s, latest: %s, status: %s",
   "plugin_doctor_version_download": "Go to download page",
+  "plugin_doctor_version_apply_update": "Apply update",
   "plugin_doctor_accessibility": "Accessibility",
   "plugin_doctor_accessibility_required": "You need to grant Wox Accessibility permission to use this plugin",
   "plugin_doctor_accessibility_open_settings": "Open Accessibility Settings",
