--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -203,8 +203,9 @@
   "plugin_url_open_in_browser": "Abrir no navegador",
   "plugin_doctor_version": "Versão",
   "plugin_doctor_version_latest": "Já está usando a versão mais recente: %s",
-  "plugin_doctor_version_update_available": "Nova versão disponível, atual: %s, mais recente: %s",
+  "plugin_doctor_version_update_available": "Nova versão disponível, atual: %s, mais recente: %s, status: %s",
   "plugin_doctor_version_download": "Ir para a página de download",
+  "plugin_doctor_version_apply_update": "Aplicar atualização",
   "plugin_doctor_accessibility": "Acessibilidade",
   "plugin_doctor_accessibility_required": "Você precisa conceder permissão de Acessibilidade ao Wox para usar este plugin",
   "plugin_doctor_accessibility_open_settings": "Abrir configurações de acessibilidade",
