--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -203,8 +203,9 @@
   "plugin_url_open_in_browser": "Открыть в браузере",
   "plugin_doctor_version": "Версия",
   "plugin_doctor_version_latest": "Уже используется последняя версия: %s",
-  "plugin_doctor_version_update_available": "Доступна новая версия, текущая: %s, последняя: %s",
+  "plugin_doctor_version_update_available": "Доступна новая версия, текущая: %s, последняя: %s, статус: %s",
   "plugin_doctor_version_download": "Перейти на страницу загрузки",
+  "plugin_doctor_version_apply_update": "Применить обновление",
   "plugin_doctor_accessibility": "Доступность",
   "plugin_doctor_accessibility_required": "Вам нужно предоставить Wox разрешение на доступность для использования этого плагина",
   "plugin_doctor_accessibility_open_settings": "Открыть настройки доступности",
