--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -13,6 +13,8 @@
   "ui_hide_on_lost_focus_tips": "选中后，Wox失去焦点时将隐藏",
   "ui_hide_on_start": "启动时隐藏",
   "ui_hide_on_start_tips": "选中后，Wox启动时将隐藏",
+  "ui_enable_auto_update": "启用自动更新",
+  "ui_enable_auto_update_tips": "选中后，Wox将在后台自动下载更新，但不会安装，直到您确认",
   "ui_show_tray": "显示托盘图标",
   "ui_show_tray_tips": "选中后，Wox将显示托盘图标",
   "ui_show_position": "显示位置",
@@ -200,8 +202,9 @@
   "plugin_websearch_web_searches": "网页搜索",
   "plugin_doctor_version": "版本",
   "plugin_doctor_version_latest": "已经是最新版本：%s",
-  "plugin_doctor_version_update_available": "发现新版本，当前版：%s，最新版本：%s",
+  "plugin_doctor_version_update_available": "发现新版本，当前版：%s，最新版本：%s, 更新状态：%s",
   "plugin_doctor_version_download": "前往下载页面",
+  "plugin_doctor_version_apply_update": "应用更新",
   "plugin_doctor_accessibility": "辅助功能",
   "plugin_doctor_accessibility_required": "您需要授予 Wox 辅助功能权限才能使用此插件",
   "plugin_doctor_accessibility_open_settings": "打开辅助功能设置",
